--- a/UI/foods-menu.html
+++ b/UI/foods-menu.html
@@ -57,9 +57,9 @@
                             <a href="users/order-now.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
 
-                            <div class="modal" id='mmm'>
+                            <div class="modal" id='#cartModal5'>
                                 <div class="modal-content">
                                     <div class="text-center">
                                         <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -109,9 +109,9 @@
                             <a href="users/order-now.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
 
-                            <div class="modal" id='mmm'>
+                            <div class="modal" id='cartModal5'>
                                 <div class="modal-content">
                                     <div class="text-center">
                                         <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -162,9 +162,9 @@
                             <a href="users/order-now.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
 
-                            <div class="modal" id='mmm'>
+                            <div class="modal" id='cartModal5'>
                                 <div class="modal-content">
                                     <div class="text-center">
                                         <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -216,9 +216,9 @@
                             <a href="users/order-now.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
 
-                            <div class="modal" id='mmm'>
+                            <div class="modal" id='cartModal5'>
                                 <div class="modal-content">
                                     <div class="text-center">
                                         <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -278,9 +278,9 @@
                         </div>
                         <div>
                             <button class="btn btn-primary">Order Now</button>
-                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
 
-                            <div class="modal" id='mmm'>
+                            <div class="modal" id='cartModal5'>
                                 <div class="modal-content">
                                     <div class="text-center">
                                         <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -332,9 +332,9 @@
                             <a href="users/order-now.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
 
-                            <div class="modal" id='mmm'>
+                            <div class="modal" id='cartModal5'>
                                 <div class="modal-content">
                                     <div class="text-center">
                                         <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -386,9 +386,9 @@
                             <a href="users/order-now.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
 
-                            <div class="modal" id='mmm'>
+                            <div class="modal" id='cartModal5'>
                                 <div class="modal-content">
                                     <div class="text-center">
                                         <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -450,9 +450,9 @@
                             <a href="users/order-now.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
 
-                            <div class="modal" id='mmm'>
+                            <div class="modal" id='cartModal5'>
                                 <div class="modal-content">
                                     <div class="text-center">
                                         <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -504,9 +504,9 @@
                             <a href="users/order-now.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
 
-                            <div class="modal" id='mmm'>
+                            <div class="modal" id='cartModal5'>
                                 <div class="modal-content">
                                     <div class="text-center">
                                         <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -558,9 +558,9 @@
                             <a href="users/order-now.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
 
-                            <div class="modal" id='mmm'>
+                            <div class="modal" id='cartModal5'>
                                 <div class="modal-content">
                                     <div class="text-center">
                                         <span class="close-button btn btn-primary btn-sm push-right">x</span>
