--- a/UI/index.html
+++ b/UI/index.html
@@ -82,9 +82,9 @@
                             <a href="signin.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
 
-                            <div class="modal" id='mmm'>
+                            <div class="modal" id='#cartModal5'>
                                 <div class="modal-content">
                                     <div class="text-center">
                                         <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -135,7 +135,7 @@
                             <a href="signin.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="bbb">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
 
                             <div class="modal" id='bbb'>
                                 <div class="modal-content">
@@ -188,7 +188,7 @@
                             <a href="signin.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="bbb">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
                         </div>
                     </div>
 
@@ -212,7 +212,7 @@
                             <a href="signin.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="bbb">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
                         </div>
                     </div>
 
@@ -236,7 +236,7 @@
                             <a href="signin.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="bbb">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
                         </div>
                     </div>
 
