--- a/UI/users/foods.html
+++ b/UI/users/foods.html
@@ -67,9 +67,9 @@
                             <a href="order-now.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal">Add to Cart</button>
 
-                            <div class="modal" id='mmm'>
+                            <div class="modal" id='#cartModal'>
                                 <div class="modal-content">
                                     <div class="text-center">
                                         <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -119,9 +119,9 @@
                             <a href="order-now.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal2">Add to Cart</button>
 
-                            <div class="modal" id='mmm'>
+                            <div class="modal" id='#cartModal2'>
                                 <div class="modal-content">
                                     <div class="text-center">
                                         <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -172,9 +172,9 @@
                             <a href="order-now.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal3">Add to Cart</button>
 
-                            <div class="modal" id='mmm'>
+                            <div class="modal" id='#cartModal3'>
                                 <div class="modal-content">
                                     <div class="text-center">
                                         <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -226,9 +226,9 @@
                             <a href="order-now.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal4">Add to Cart</button>
 
-                            <div class="modal" id='mmm'>
+                            <div class="modal" id='#cartModal4'>
                                 <div class="modal-content">
                                     <div class="text-center">
                                         <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -288,9 +288,9 @@
                         </div>
                         <div>
                             <button class="btn btn-primary">Order Now</button>
-                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
 
-                            <div class="modal" id='mmm'>
+                            <div class="modal" id='#cartModal5'>
                                 <div class="modal-content">
                                     <div class="text-center">
                                         <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -342,9 +342,9 @@
                             <a href="order-now.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
 
-                            <div class="modal" id='mmm'>
+                            <div class="modal" id='#cartModal5'>
                                 <div class="modal-content">
                                     <div class="text-center">
                                         <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -396,9 +396,9 @@
                             <a href="order-now.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
 
-                            <div class="modal" id='mmm'>
+                            <div class="modal" id='#cartModal5'>
                                 <div class="modal-content">
                                     <div class="text-center">
                                         <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -460,9 +460,9 @@
                             <a href="order-now.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
 
-                            <div class="modal" id='mmm'>
+                            <div class="modal" id='cartModal5'>
                                 <div class="modal-content">
                                     <div class="text-center">
                                         <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -514,9 +514,9 @@
                             <a href="order-now.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
 
-                            <div class="modal" id='mmm'>
+                            <div class="modal" id='cartModal5'>
                                 <div class="modal-content">
                                     <div class="text-center">
                                         <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -568,9 +568,9 @@
                             <a href="order-now.html">
                                 <button class="btn btn-primary">Order Now</button>
                             </a>
-                            <button class="triggerModal btn btn-blue" data-target="mmm">Add to Cart</button>
+                            <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
 
-                            <div class="modal" id='mmm'>
+                            <div class="modal" id='cartModal5'>
                                 <div class="modal-content">
                                     <div class="text-center">
                                         <span class="close-button btn btn-primary btn-sm push-right">x</span>
