--- a/UI/admins/edit-food.html
+++ b/UI/admins/edit-food.html
@@ -123,7 +123,7 @@
             <div class="container">My Cart</div>
             <div class="card text-inverse">6 Items added</div>
             <div class="container">
-                <button class="btn btn-red">Checkout</button>
+                <button class="btn btn-green">View</button>
             </div>
         </div>
     </main>
