--- a/UI/users/completed-orders.html
+++ b/UI/users/completed-orders.html
@@ -78,9 +78,9 @@
                                     <td class="text-success">Delivered</td>
                                     <td class="">
 
-                                        <button class="triggerModal btn btn-red btn-sm" disabled>Cancel Order</button>
+                                        <button class="triggerModal btn btn-red btn-sm" data-target='mmm' disabled>Cancel Order</button>
 
-                                        <div class="modal" data-item='mmm'>
+                                        <div class="modal" id='#mmm'>
                                             <div class="modal-content">
                                                 <div class="text-center">
                                                     <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -118,7 +118,7 @@
             <div class="container">My Cart</div>
             <div class="card text-inverse">6 Items added</div>
             <div class="container">
-                <button class="btn btn-red">Checkout</button>
+                <button class="btn btn-green">View</button>
             </div>
         </div>
     </main>
