--- a/UI/users/my-cart.html
+++ b/UI/users/my-cart.html
@@ -67,10 +67,33 @@
                                     <td>1</td>
                                     <td>&#8358; 500</td>
                                     <td class="">
-                                        <button class="btn btn-primary btn-smX">Update Qauntity</button>
-                                        <button class="triggerModal btn btn-red btn-smX">Remove Item</button>
+                                        <button class="triggerModal btn btn-primary btn-sm" data-target='updateModal'>Update Qauntity</button>
+                                        <button class="triggerModal btn btn-red btn-sm" data-target='confirmModal'>Remove Item</button>
 
-                                        <div class="modal" id='mmm'>
+                                        <div class="modal" id='#updateModal'>
+                                            <div class="modal-content">
+                                                <div class="text-center">
+                                                    <span class="close-button btn btn-primary btn-sm push-right">x</span>
+                                                    <h2 class="text-center">Update Food Item From Cart</h2>
+
+                                                    <div class="content-div">
+                                                        <div class="item-title">Chicken Stew and Rice -
+                                                            <span class="badge price">&#8358;3,500</span>
+                                                        </div>
+                                                    </div>
+                                                    <form action="javascript:;" method="POST" class=" card card-shadow">
+                                                        <div class="">
+                                                            <h3>Input New Quantity</h3>
+                                                            <input type="text" class="form-input" placeholder="Enter New Quantity">
+                                                            <h3>Are you sure you want to update this item's quantity?</h3>
+                                                            <button class="btn btn-green btn-rounded btn-bg">Update</button>
+                                                            <button class="close-button btn btn-primary btn-rounded btn-bg">Cancel</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="modal" id='#confirmModal'>
                                             <div class="modal-content">
                                                 <div class="text-center">
                                                     <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -83,15 +106,14 @@
                                                     </div>
                                                     <form action="javascript:;" method="POST" class=" card card-shadow">
                                                         <div class="">
-                                                            <h2>Are you sure you want to delete this item from cart?</h2>
-                                                            <button class="btn btn-red btn-rounded btn-bg">Proceed</button>
+                                                            <h3>Are you sure you want to remove this item from cart?</h3>
+                                                            <button class="btn btn-red btn-rounded btn-bg">Remove</button>
                                                             <button class="close-button btn btn-primary btn-rounded btn-bg">Cancel</button>
                                                         </div>
                                                     </form>
                                                 </div>
                                             </div>
                                         </div>
-
                                     </td>
                                 </tr>
                                 <tr>
@@ -101,10 +123,33 @@
                                     <td>2</td>
                                     <td>&#8358; 7,000</td>
                                     <td class="">
-                                        <button class="btn btn-primary btn-smX">Update Quantity</button>
-                                        <button class="triggerModal btn btn-red btn-smX">Remove Item</button>
+                                        <button class="triggerModal btn btn-primary btn-sm" data-target='updateModal'>Update Qauntity</button>
+                                        <button class="triggerModal btn btn-red btn-sm" data-target='confirmModal'>Remove Item</button>
 
-                                        <div class="modal" id='mmm'>
+                                        <div class="modal" id='#updateModal'>
+                                            <div class="modal-content">
+                                                <div class="text-center">
+                                                    <span class="close-button btn btn-primary btn-sm push-right">x</span>
+                                                    <h2 class="text-center">Update Food Item From Cart</h2>
+
+                                                    <div class="content-div">
+                                                        <div class="item-title">Chicken Stew and Rice -
+                                                            <span class="badge price">&#8358;3,500</span>
+                                                        </div>
+                                                    </div>
+                                                    <form action="javascript:;" method="POST" class=" card card-shadow">
+                                                        <div class="">
+                                                            <h3>Input New Quantity</h3>
+                                                            <input type="text" class="form-input" placeholder="Enter New Quantity">
+                                                            <h3>Are you sure you want to update this item's quantity?</h3>
+                                                            <button class="btn btn-green btn-rounded btn-bg">Update</button>
+                                                            <button class="close-button btn btn-primary btn-rounded btn-bg">Cancel</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="modal" id='#confirmModal'>
                                             <div class="modal-content">
                                                 <div class="text-center">
                                                     <span class="close-button btn btn-primary btn-sm push-right">x</span>
@@ -117,8 +162,8 @@
                                                     </div>
                                                     <form action="javascript:;" method="POST" class=" card card-shadow">
                                                         <div class="">
-                                                            <h2>Are you sure you want to delete this item from cart?</h2>
-                                                            <button class="btn btn-red btn-rounded btn-bg">Proceed</button>
+                                                            <h3>Are you sure you want to remove this item from cart?</h3>
+                                                            <button class="btn btn-red btn-rounded btn-bg">Remove</button>
                                                             <button class="close-button btn btn-primary btn-rounded btn-bg">Cancel</button>
                                                         </div>
                                                     </form>
@@ -127,12 +172,25 @@
                                         </div>
                                     </td>
                                 </tr>
+                                <tr>
+                                    <!-- <td><a class="link">#55678</a></td> -->
+                                    <td>
+                                        <h2>Total</h2>
+                                    </td>
+                                    <td></td>
+                                    <td></td>
+                                    <td class="">
+                                        <h2>&#8358; 7,000</h2>
+                                    </td>
+                                    <td class="">
+                                    </td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
                 </div>
-                <div class="text-center">
-                    <button class="btn btn-green btn-bg btn-rounded">Checkout</button>
+                <div class="text-center contain-50">
+                    <a href="javascript:;" class="btn btn-green btn-bg btn-rounded btn-block">Checkout</a href="javascript:;">
                 </div>
             </section>
 
