--- a/UI/admins/all-orders.html
+++ b/UI/admins/all-orders.html
@@ -74,9 +74,82 @@
                                     <td class="text-pending">Pending</td>
                                     <td class="text-pending">Pending</td>
                                     <td class="">
-                                        <button class="btn btn-green btn-sm">Accept</button>
-                                        <button class="btn btn-red btn-sm">Reject</button>
-                                        <button class="btn btn-primary btn-sm">Mark As Complete</button>
+                                        <button class="triggerModal btn btn-blue btn-sm" data-target="acceptModal">Accept</button>
+                                        <button class="triggerModal btn btn-red btn-sm" data-target="rejectModal">Reject</button>
+                                        <button class="triggerModal btn btn-green btn-sm" data-target="completeModal">Mark
+                                            As Complete
+                                        </button>
+
+                                        <div class="modal" id='#acceptModal'>
+                                            <div class="modal-content">
+                                                <div class="text-center">
+                                                    <span class="close-button btn btn-primary btn-sm push-right">x</span>
+                                                    <h2 class="text-center">Accept User Order</h2>
+
+                                                    <div class="content-div">
+                                                        <h3 class="item-title link">Order(#55678)
+                                                        </h3>
+                                                        <h4 class="">Total Cost <span class="badge price">&#8358;3,500</span></h4>
+                                                    </div>
+                                                    <form action="javascript:;" method="POST" class=" card card-shadow">
+                                                        <div class="">
+                                                            <h2>Accepting this order, processes all items in the order.
+                                                                Are you sure you want to accept this users
+                                                                order?</h2>
+                                                            <button class="btn btn-green btn-rounded btn-bg">Accept</button>
+                                                            <button class="close-button btn btn-primary btn-rounded btn-bg">Cancel</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="modal" id='#rejectModal'>
+                                            <div class="modal-content">
+                                                <div class="text-center">
+                                                    <span class="close-button btn btn-primary btn-sm push-right">x</span>
+                                                    <h2 class="text-center">Reject User Order</h2>
+
+                                                    <div class="content-div">
+                                                        <h3 class="item-title link">Order(#55678)
+                                                        </h3>
+                                                        <h4 class="">Total Cost <span class="badge price">&#8358;3,500</span></h4>
+                                                    </div>
+                                                    <form action="javascript:;" method="POST" class=" card card-shadow">
+                                                        <div class="">
+                                                            <h2>Rejecting this order cancels all items within this
+                                                                order. Are you sure
+                                                                you want to reject this users order?</h2>
+                                                            <button class="btn btn-red btn-rounded btn-bg">Reject</button>
+                                                            <button class="close-button btn btn-primary btn-rounded btn-bg">Cancel</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="modal" id='#completeModal'>
+                                            <div class="modal-content">
+                                                <div class="text-center">
+                                                    <span class="close-button btn btn-primary btn-sm push-right">x</span>
+                                                    <h2 class="text-center">Mark Order As Complete</h2>
+
+                                                    <div class="content-div">
+                                                        <div class="item-title">Chicken Stew and Rice -
+                                                            <span class="badge price">&#8358;3,500</span>
+                                                        </div>
+                                                    </div>
+                                                    <form action="javascript:;" method="POST" class=" card card-shadow">
+                                                        <div class="">
+                                                            <h2>Marking this order as complete accepts all the
+                                                                items in the order and updates its delivery status to
+                                                                completed, Are you sure you want to proceed?</h2>
+                                                            <button class="btn btn-green btn-rounded btn-bg">Proceed</button>
+                                                            <button class="close-button btn btn-primary btn-rounded btn-bg">Cancel</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </td>
                                 </tr>
                                 <tr>
@@ -95,9 +168,14 @@
                                     <td class="text-rejected">Rejected</td>
                                     <td class="text-rejected">Canceled</td>
                                     <td class="">
-                                        <button class="btn btn-green btn-sm" disabled>Accept</button>
-                                        <button class="btn btn-red btn-sm">Rejected</button>
-                                        <button class="btn btn-primary btn-sm" disabled>Mark As Complete</button>
+                                        <button class="triggerModal btn btn-blue btn-sm" data-target="acceptModal"
+                                            disabled>Accept</button>
+                                        <button class="triggerModal btn btn-red btn-sm" data-target="rejectModal"
+                                            disabled>Rejected</button>
+                                        <button class="triggerModal btn btn-green btn-sm" data-target="completeModal"
+                                            disabled>Mark
+                                            As Complete
+                                        </button>
                                     </td>
                                 </tr>
                                 <tr>
@@ -116,9 +194,14 @@
                                     <td class="text-success">Completed</td>
                                     <td class="text-success">Delivered</td>
                                     <td class="">
-                                        <button class="btn btn-green btn-sm">Accepted</button>
-                                        <button class="btn btn-red btn-sm" disabled>Reject</button>
-                                        <button class="btn btn-primary btn-sm">Mark As Complete</button>
+                                        <button class="triggerModal btn btn-green btn-sm" data-target="acceptModal"
+                                            disabled>Accepted</button>
+                                        <button class="triggerModal btn btn-red btn-sm" data-target="rejectModal"
+                                            disabled>Reject</button>
+                                        <button class="triggerModal btn btn-green btn-sm" data-target="completeModal"
+                                            disabled>Mark
+                                            As Completed
+                                        </button>
                                     </td>
                                 </tr>
                             </tbody>
