--- a/UI/admins/ordered-items.html
+++ b/UI/admins/ordered-items.html
@@ -80,7 +80,30 @@
                                     <td class="text-success">Completed</td>
                                     <td class="text-success">Delivered</td>
                                     <td class="">
-                                        <button class="btn btn-red btn-sm disabled" disabled>Cancel Item</button>
+                                        <button class="triggerModal btn btn-red btn-sm" data-target="cancelModal"
+                                            disabled>Cancel Item</button>
+
+                                        <div class="modal" id='#cancelModal'>
+                                            <div class="modal-content">
+                                                <div class="text-center">
+                                                    <span class="close-button btn btn-primary btn-sm push-right">x</span>
+                                                    <h2 class="text-center">Cancel An Item</h2>
+
+                                                    <div class="content-div">
+                                                        <div class="item-title">Chicken Stew and Rice -
+                                                            <span class="badge price">&#8358;3,500</span>
+                                                        </div>
+                                                    </div>
+                                                    <form action="javascript:;" method="POST" class=" card card-shadow">
+                                                        <div class="">
+                                                            <h2>Are you sure you want to cancel food item?</h2>
+                                                            <button class="btn btn-red btn-rounded btn-bg">Proceed</button>
+                                                            <button class="close-button btn btn-primary btn-rounded btn-bg">Cancel</button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </td>
                                 </tr>
                                 <tr>
@@ -93,7 +116,8 @@
                                     <td class="text-success">Completed</td>
                                     <td class="text-success">Delivered</td>
                                     <td class="">
-                                        <button class="btn btn-red btn-sm" disabled>Cancel Item</button>
+                                        <button class="triggerModal btn btn-red btn-sm" data-target="cancelModal"
+                                            disabled>Cancel Item</button>
                                     </td>
                                 </tr>
                                 <tr>
@@ -103,10 +127,11 @@
                                     <td>2</td>
                                     <td>&#8358; 7,000</td>
                                     <td>11/09/2018 08:55pm</td>
-                                    <td class="text-pending">Processing</td>
+                                    <td class="text-pending">Pending</td>
                                     <td class="text-pending">Pending</td>
                                     <td class="">
-                                        <button class="btn btn-red btn-sm">Cancel Item</button>
+                                        <button class="triggerModal btn btn-red btn-sm" data-target="cancelModal">Cancel
+                                            Item</button>
                                     </td>
                                 </tr>
                             </tbody>
