--- a/UI/users/completed-orders.html
+++ b/UI/users/completed-orders.html
@@ -78,7 +78,8 @@
                                     <td class="text-success">Delivered</td>
                                     <td class="">
 
-                                        <button class="triggerModal btn btn-red btn-sm" data-target='mmm' disabled>Cancel Order</button>
+                                        <button class="triggerModal btn btn-red btn-sm" data-target='mmm' disabled>Cancel
+                                            Order</button>
 
                                         <div class="modal" id='#mmm'>
                                             <div class="modal-content">
@@ -118,7 +119,7 @@
             <div class="container">My Cart</div>
             <div class="card text-inverse">6 Items added</div>
             <div class="container">
-                <button class="btn btn-green">View</button>
+                <a href="my-cart.html" class="btn btn-green">View</a>
             </div>
         </div>
     </main>
