--- a/UI/users/dashboard.html
+++ b/UI/users/dashboard.html
@@ -96,7 +96,7 @@
             <div class="container">My Cart</div>
             <div class="card text-inverse">6 Items added</div>
             <div class="container">
-                <button class="btn btn-green">View</button>
+                <a href="my-cart.html" class="btn btn-green">View</a>
             </div>
         </div>
     </main>
