--- a/UI/users/my-cart.html
+++ b/UI/users/my-cart.html
@@ -67,8 +67,10 @@
                                     <td>1</td>
                                     <td>&#8358; 500</td>
                                     <td class="">
-                                        <button class="triggerModal btn btn-primary btn-sm" data-target='updateModal'>Update Qauntity</button>
-                                        <button class="triggerModal btn btn-red btn-sm" data-target='confirmModal'>Remove Item</button>
+                                        <button class="triggerModal btn btn-primary btn-sm" data-target='updateModal'>Update
+                                            Qauntity</button>
+                                        <button class="triggerModal btn btn-red btn-sm" data-target='confirmModal'>Remove
+                                            Item</button>
 
                                         <div class="modal" id='#updateModal'>
                                             <div class="modal-content">
@@ -123,8 +125,10 @@
                                     <td>2</td>
                                     <td>&#8358; 7,000</td>
                                     <td class="">
-                                        <button class="triggerModal btn btn-primary btn-sm" data-target='updateModal'>Update Qauntity</button>
-                                        <button class="triggerModal btn btn-red btn-sm" data-target='confirmModal'>Remove Item</button>
+                                        <button class="triggerModal btn btn-primary btn-sm" data-target='updateModal'>Update
+                                            Qauntity</button>
+                                        <button class="triggerModal btn btn-red btn-sm" data-target='confirmModal'>Remove
+                                            Item</button>
 
                                         <div class="modal" id='#updateModal'>
                                             <div class="modal-content">
@@ -196,14 +200,6 @@
 
         </div>
 
-        <div class="cart card-shadow text-center">
-            <div class="right-nav">x</div>
-            <div class="container">My Cart</div>
-            <div class="card text-inverse">6 Items added</div>
-            <div class="container">
-                <a href="my-cart.html" class="btn btn-green">View Cart</a href="my-cart.html">
-            </div>
-        </div>
     </main>
 
     <footer>
