--- a/UI/users/order-now.html
+++ b/UI/users/order-now.html
@@ -57,7 +57,8 @@
                                     <span class="badge price">&#8358;3,500</span>
                                 </div>
                                 <div class="item-description">
-                                    <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc eqwewdsc asdfefedv
+                                    <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
+                                        eqwewdsc asdfefedv
                                         ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
                                 </div>
                             </div>
@@ -73,7 +74,8 @@
                                 <input type="number" class="form-input" placeholder="Enter Desired Quantity example 3">
                             </div>
                             <button class="btn btn-green btn-block btn-rounded btn-bg">Order Now</button>
-                            <button class="triggerModal btn btn-blue btn-block btn-rounded btn-bg" data-target="mmm">Add to Cart Instead</button>
+                            <button class="triggerModal btn btn-blue btn-block btn-rounded btn-bg" data-target="mmm">Add
+                                to Cart Instead</button>
 
                             <div class="modal" id='#mmm'>
                                 <div class="modal-content">
@@ -90,8 +92,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form action="javascript:;" method="POST" class=" card card-shadow">
@@ -120,7 +124,7 @@
             <div class="container">My Cart</div>
             <div class="card text-inverse">6 Items added</div>
             <div class="container">
-                <button class="btn btn-green">View</button>
+                <a href="my-cart.html" class="btn btn-green">View</a>
             </div>
         </div>
     </main>
