--- a/UI/admins/edit-food.html
+++ b/UI/admins/edit-food.html
@@ -63,7 +63,8 @@
                                     <span class="badge price">&#8358;3,500</span>
                                 </div>
                                 <div class="item-description">
-                                    <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc eqwewdsc asdfefedv
+                                    <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
+                                        eqwewdsc asdfefedv
                                         ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
                                 </div>
                                 <div class="item-subtitle">
@@ -123,7 +124,7 @@
             <div class="container">My Cart</div>
             <div class="card text-inverse">6 Items added</div>
             <div class="container">
-                <button class="btn btn-green">View</button>
+                <a href="my-cart.html" class="btn btn-green">View</a>
             </div>
         </div>
     </main>
