chore(Update index.html)

--- a/UI/index.html
+++ b/UI/index.html
@@ -35,11 +35,13 @@
         <div class="hero">
             <div class="contain text-center">
                 <h1 class="">Welcome To Fast Food Fast</h1>
-                <p>The best food ordering app. Order afordable food items, drinks, pastries and African dishes to your door
+                <p>The best food ordering app. Order afordable food items, drinks, pastries and African dishes to your
+                    door
                     step instantly!</p>
                 <form class="form-data" method="GET">
                     <div class="form-member">
-                        <input type="text" name="search" class="form-input transparent text-center hero-input" placeholder="Search foods and dishes">
+                        <input type="text" name="search" class="form-input transparent text-center hero-input"
+                            placeholder="Search foods and dishes">
                         <a>
                             <button name="search" class="btn btn-primary">Search Food</button>
                         </a>
@@ -74,7 +76,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Cooked Foods</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">Food Details</span>
                             </div>
                         </div>
@@ -95,8 +98,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form method="POST" class="xform-data xfood-item card card-shadow">
@@ -127,7 +132,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Cooked Foods</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">Food Details</span>
                             </div>
                         </div>
@@ -148,8 +154,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form method="POST" class="xform-data xfood-item card card-shadow">
@@ -180,7 +188,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Cooked Foods</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">Food Details</span>
                             </div>
                         </div>
@@ -204,7 +213,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Cooked Foods</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">Food Details</span>
                             </div>
                         </div>
@@ -228,7 +238,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Cooked Foods</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">Food Details</span>
                             </div>
                         </div>
@@ -261,17 +272,26 @@
             <section class="flex-h text-center">
                 <div class="flex-item card" id="about">
                     <h2>About Fast Food Fast</h2>
-                    <p class="text-simple">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam in sequi incidunt tempora! Lorem ipsum
-                        dolor sit amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem ipsum dolor sit
-                        amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem ipsum dolor sit amet consectetur
+                    <p class="text-simple">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam in sequi
+                        incidunt tempora! Lorem ipsum
+                        dolor sit amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem ipsum dolor
+                        sit
+                        amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem ipsum dolor sit amet
+                        consectetur
                         adipisicing elit. Totam in sequi incidunt tempora!</p>
-                    <p class="text-simple">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam in sequi incidunt tempora! Lorem ipsum
-                        dolor sit amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem ipsum dolor sit
-                        amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem ipsum dolor sit amet consectetur
+                    <p class="text-simple">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam in sequi
+                        incidunt tempora! Lorem ipsum
+                        dolor sit amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem ipsum dolor
+                        sit
+                        amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem ipsum dolor sit amet
+                        consectetur
                         adipisicing elit. Totam in sequi incidunt tempora!</p>
-                    <p class="text-simple">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam in sequi incidunt tempora! Lorem ipsum
-                        dolor sit amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem ipsum dolor sit
-                        amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem ipsum dolor sit amet consectetur
+                    <p class="text-simple">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam in sequi
+                        incidunt tempora! Lorem ipsum
+                        dolor sit amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem ipsum dolor
+                        sit
+                        amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem ipsum dolor sit amet
+                        consectetur
                         adipisicing elit. Totam in sequi incidunt tempora!</p>
                 </div>
                 <div class="flex-item card" id="contact">
